Updated with working version

--- a/cups/config.yaml
+++ b/cups/config.yaml
@@ -1,13 +1,15 @@
 name: "CUPS printserver"
-version: "0.10"
+version: "0.16"
 slug: "cups"
-description: "Printserver"
+description: "The standards-based, open source printing system"
 arch:
   - amd64
   - armhf
   - armv7 
   - aarch64
   - i386
+startup: "application"
+boot: "auto"
 ports:
   631/tcp: 631
 ports_description:
@@ -18,11 +20,6 @@ options:
 schema:
   user: "str"
   passwd: "password"
-map: 
-  - config:rw
-ingress: true
-ingress_stream: true
-ingress_port: 0
-host_network: true
-host_dbus: true
 init: false
+host_network: true
+
